--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
