--- a/package.json
+++ b/package.json
@@ -14,13 +14,24 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/urbanist": "^5.0.16",
+    "@hcaptcha/react-hcaptcha": "^1.10.1",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.0",
+    "@types/mdx": "^2.0.11",
+    "file-loader": "^6.2.0",
     "framer-motion": "^10.16.4",
+    "markdown-loader": "^8.0.0",
     "next": "13.5.4",
+    "next-mdx-remote": "^4.4.1",
+    "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
