--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "baseUrl": "./", // Asegúrate de tener esto
     "paths": {
-      "@/*": ["src/*"] // Aquí ajustas el alias
+      "@/*": [
+        "src/*"
+      ] // Aquí ajustas el alias
     },
     "lib": [
       "dom",
@@ -31,7 +33,8 @@
     "build/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
-    "src/**/*"
+    "src/**/*",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
